# Algorithmic-Problem-Solving-Projects

./: README.md
Algorithims/Compression Algorithims/float arithmetic coding big real/: file_decompressed.txt
Algorithims/Compression Algorithims/float arithmetic coding big real/src/: App.java
Algorithims/Compression Algorithims/huffman/: file.txt
Algorithims/Compression Algorithims/huffman/src/: App.java
Algorithims/Compression Algorithims/lzw/src/: App.java
Algorithims/Compression Algorithims/vector quatization/src/: App.java
Algorithims/Dynamic programming & Greedy/: Fibonacci_Series.cpp
Algorithims/Searching Algorithims/: A star algorithim.pl  Binary & sequential search.cpp
Algorithims/Sorting algorithims/: Heap_PriorityQueue_Heapsort.cpp  SortedByGPA.txt  SortedByName.txt  bubbleSort.cpp  main.cpp  merge_sort.cpp  quick_sort.cpp  shellSort.cpp  students.txt
Data structures/: Hashing.cpp  suffix-array.cpp
Data structures/Linear Structures/: circular_linked_list.cpp  double_linked_list.cpp  linked_list.cpp  queue.cpp  stack.cpp
Data structures/Trees/: AVL.h  B-tree.cpp  BST.h  Tree.h  heap.h  main.cpp  red_black_tree.cpp
Logic-Based projects/BigDecimal/: BigReal.cpp  BigReal.h  main.cpp
Logic-Based projects/Data Compression/: lz77.py
Logic-Based projects/Data Compression/lzw/: file.txt
Logic-Based projects/XO games/: BoardGame_CLASSES.cpp  BoardGame_CLASSES.h  CMakeLists.txt  ConnectBoard.cpp  ConnectBoard.h  Pyramic_Board.cpp  Pyramic_Board.h  assignment report.docx  draft.cpp  fivebyfiveXOgame.cpp  fivebyfiveXOgame.h  main.cpp
